# transaction-senders-and-receivers

./: .gitignore  README.md  gunicorn.conf.py  pyproject.toml  setup.cfg
common/: exceptions.py  serializers.py  typing.py
common/utils/: __init__.py  api.py
config/: urls.py
config/settings/: base.py  dev.py  prod.py  staging.py  testing.py
docker/: Dockerfile  docker-compose.dev.yaml  docker-compose.test.yaml  start
docker/local/: Dockerfile  local-nginx.conf
transactions/: dtos.py  exceptions.py  models.py  selectors.py  services.py  urls.py
transactions/api/v1/: serializers.py  urls.py  views.py
transactions/api/v1/tests/: test_apis.py
transactions/migrations/: 0001_initial.py  0002_auto_20240923_0908.py
transactions/tests/: test_selectors.py  test_services.py
users/: exceptions.py  models.py  selectors.py  services.py  urls.py
users/api/v1/: serializers.py  urls.py  views.py
users/api/v1/tests/: test_apis.py
users/migrations/: 0001_initial.py  0002_auto_20240923_0910.py
users/tests/: test_selectors.py  test_services.py
